<resources>
    <string name="app_name">Dayversify</string>
    <string name="action_settings">Settings</string>

    <!-- Home page strings -->
    <string name="home_fragment_label">Home</string>
    <string name="home_calendar_label">Choose a day from the calendar below!</string>
    <string name="date_label">Selected date:</string>
    <string name="home_sleep_label">Hours of sleep:</string>
    <string name="home_step_label">Steps:</string>
    <string name="home_mood_label">General mood:</string>
    <string name="home_diary_label">Daily journal:</string>
    <string name="home_modify_button">Edit</string>
    <string name="home_view_button">View</string>
    <string name="home_sleep_entry_label">How many hours of sleep did you get?</string>
    <string name="home_step_entry_label">How many steps did you do?</string>
    <string name="home_mood_entry_label">How did you feel on this day?</string>
    <string name="home_diary_title">Daily Journal</string>
    <string name="home_diary_date_label">Viewing journal for:</string>
    <string name="home_diary_return_button">Done</string>

    <!-- Analytics page strings -->
    <string name="analytics_fragment_label">Analytics</string>
    <string name="analytics_sleep_label">Daily Sleep</string>
    <string name="analytics_steps_label">Daily Steps</string>
    <string name="analytics_mood_label">Daily Mood</string>

    <!-- Settings page strings -->
    <string name="settings_fragment_label">Settings</string>
    <string name="settings_date_label">Use American date format</string>
    <string name="settings_clear_label">Clear user data</string>
    <string name="settings_theme_label">Toggle night mode</string>
    <string name="settings_clear_button">Clear</string>

    <!-- Mood notification strings -->
    <string name="channel_name">Mood</string>
    <string name="channel_description">Used to remind users to set daily mood</string>
</resources>