<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.cosc345project.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/home_fragment">

        <action
            android:id="@+id/action_HomeFragment_to_AnalyticsFragment"
            app:destination="@id/AnalyticsFragment" />
    </fragment>
    <fragment
        android:id="@+id/AnalyticsFragment"
        android:name="com.example.cosc345project.AnalyticsFragment"
        android:label="@string/analytics_fragment_label"
        tools:layout="@layout/analytics_fragment">

        <action
            android:id="@+id/action_AnalyticsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.cosc345project.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/settings_fragment">

        <action
            android:id="@+id/action_SettingsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>