<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="94dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings_fragment_label"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/settings_toggle_date"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toEndOf="@+id/settings_date_label"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/settings_toggle_theme"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toEndOf="@+id/settings_theme_label"
        app:layout_constraintTop_toBottomOf="@+id/settings_toggle_date" />

    <TextView
        android:id="@+id/settings_date_label"
        android:layout_width="214dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/settings_date_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_title" />

    <TextView
        android:id="@+id/settings_clear_label"
        android:layout_width="124dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:text="@string/settings_clear_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_theme_label" />

    <Button
        android:id="@+id/settings_clear_button"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="3dp"
        android:text="@string/settings_clear_button"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/settings_clear_label"
        app:layout_constraintTop_toBottomOf="@+id/settings_toggle_theme" />

    <TextView
        android:id="@+id/settings_theme_label"
        android:layout_width="151dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/settings_theme_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_date_label" />

</androidx.constraintlayout.widget.ConstraintLayout>