<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_scroll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sleep_entry"
                android:layout_width="262dp"
                android:layout_height="155dp"
                android:layout_marginStart="74dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="75dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar_layout">

                <com.google.android.material.slider.Slider
                    android:id="@+id/sleep_slider"
                    android:layout_width="199dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="3dp"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="24"
                    app:labelBehavior="gone"
                    app:layout_constraintBottom_toTopOf="@+id/sleep_display"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_sleep_entry_label" />

                <TextView
                    android:id="@+id/home_sleep_entry_label"
                    android:layout_width="255dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/home_sleep_entry_label"
                    app:layout_constraintBottom_toTopOf="@+id/sleep_slider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sleep_display"
                    android:layout_width="68dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="95dp"
                    android:layout_marginEnd="96dp"
                    android:layout_marginBottom="2dp"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sleep_slider" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/step_entry"
                android:layout_width="238dp"
                android:layout_height="182dp"
                android:layout_marginStart="87dp"
                android:layout_marginEnd="86dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar_layout">

                <it.beppi.knoblibrary.Knob
                    android:id="@+id/steps_knob"
                    android:layout_width="133dp"
                    android:layout_height="115dp"
                    android:layout_marginStart="16dp"
                    app:kBalloonValuesSlightlyTransparent="false"
                    app:kFreeRotation="true"
                    app:kNumberOfStates="50"
                    app:kShowBalloonValues="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/home_step_entry_label"
                    android:layout_width="182dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="28dp"
                    android:text="@string/home_step_entry_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/step_display"
                    android:layout_width="101dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="69dp"
                    android:layout_marginEnd="68dp"
                    android:textAlignment="center"
                    android:textSize="34sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_step_entry_label" />

                <ImageButton
                    android:id="@+id/home_submit_steps"
                    android:layout_width="78dp"
                    android:layout_height="82dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_action_done"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/steps_knob" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/input_layout"
                android:layout_width="231dp"
                android:layout_height="136dp"
                android:layout_marginStart="90dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="90dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar_layout">

                <TextView
                    android:id="@+id/home_sleep_data"
                    android:layout_width="52dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="16dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/home_sleep_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_step_data"
                    android:layout_width="53dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="42dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/home_step_label"
                    app:layout_constraintTop_toBottomOf="@+id/home_sleep_data" />

                <Button
                    android:id="@+id/home_step_button"
                    android:layout_width="82dp"
                    android:layout_height="57dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/home_modify_button"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/home_sleep_button"
                    android:layout_width="81dp"
                    android:layout_height="57dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/home_modify_button"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/home_step_label"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="53dp"
                    android:layout_marginBottom="36dp"
                    android:text="@string/home_step_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/home_sleep_label"
                    android:layout_width="98dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/home_sleep_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/calendar_layout"
                android:layout_width="346dp"
                android:layout_height="389dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="31dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_layout">

                <CalendarView
                    android:id="@+id/mainCalendar"
                    android:layout_width="350dp"
                    android:layout_height="338dp"
                    android:layout_marginTop="2dp"
                    android:clickable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_date"
                    android:layout_width="164dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="93dp"
                    android:layout_marginEnd="90dp"
                    android:text="@string/date_label"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainCalendar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/title_layout"
                android:layout_width="254dp"
                android:layout_height="79dp"
                android:layout_marginStart="78dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="79dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/home_calendar_label"
                    android:layout_width="250dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/home_calendar_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_title" />

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="165dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="44dp"
                    android:text="@string/app_name"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>